style.css
/* ... */
.single-project article .business-model h3 {
	margin: 0 0 0.5em;
}
.single-project article .business-model .canvas {
	display: flex;
	flex-flow: row wrap;
	align-items: stretch;
	align-content: stretch;
	width: 100%;
	font-size: 0.9em;
}
.single-project article .business-model .canvas > div {
	width: 100%;
	flex: 1 1 31.3%;
	border: 2px solid #e9e9e9;
	border-radius: 5px;
	margin: 0 1% 20px;
}
.single-project article .business-model .canvas div > div {
	padding: 1em;
	overflow: scroll;
	flex: 1 1 31.3%;
	max-height: 25em;
}
.single-project article .business-model .canvas .row {
	display: flex;
	flex-flow: row wrap;
	align-items: stretch;
	align-content: stretch;
	margin: 0;
	border: none;
}
.single-project article .business-model .canvas .row > div {
	border: 2px solid #e9e9e9;
	border-radius: 5px;
	margin: 0 1%;
}
.single-project article .business-model .canvas p {
	margin-bottom: 0;
}
@media screen and (max-width: 756px) {
	.single-project article .business-model .canvas > div,
	.single-project article .business-model .canvas .row > div{
		width: 100%;
		flex: 1 1 100%;
		height: auto !important;
	}
}

.single-project article .timeline ul {
	padding: 0;
	margin: 0;
	list-style-type: none;
}
.single-project article .timeline li {
	display: flex;
	flex-flow: row wrap;
	padding: 20px 0;
	border-bottom: 2px solid #e9e9e9;
	line-height: 1.8em;
}
.single-project article .timeline li:last-child {
	border-bottom: none;
}
.single-project article .timeline li .date {
	flex: 0 1 100%;
	color: #7B8F97;
	padding-right: 1em;
}
.single-project article .timeline li .event {
	flex: 0 1 100%
}
.single-project article .timeline li h3,
.single-project article .timeline li p {
	margin: 0;
	padding: 0;
}
.single-project article .timeline li h3 {
	font-size: 1em;
}
.single-project article .timeline li p {
	font-size: 0.9em;
}
@media screen and (min-width: 768px) {
	.single-project article .timeline li .date {
		flex: 0 1 20%;
	}
	.single-project article .timeline li .event {
		flex: 0 1 80%
	}
}

.single-project article .role-descriptions {
	padding-bottom: 3em;
}
.single-project article .role-descriptions .team-roles {
	display: flex;
	flex-flow: row wrap;
	font-size: 0.9em;
}
.single-project article .role-descriptions .team-role {
	flex: 0 1 98%;
	border: 2px solid #e9e9e9;
	border-radius: 5px;
	padding: 1em;
	margin: 0 1% 20px;
}
.single-project article .role-descriptions .team-role h3 {
	margin: 0;
}
.single-project article .role-descriptions .team-role p {
	margin: 10px 0 0;
}
@media screen and (min-width: 768px) {
	.single-project article .role-descriptions .team-role {
		flex: 0 1 48%;
	}
}
@media screen and (min-width: 992px) {
	.single-project article .role-descriptions .team-role {
		flex: 0 1 31.33%;
	}
}

/*Updates Section Styling*/
.entry-meta a {
	color: #546368 !important;
}
.byline .fn {
	display: block;
	font-weight: 700;
}
.posted-on {
	position: relative;
	display: block;
}
.byline .avatar {
	width: 45px;
	height: 45px;
	border-radius: 50%;
	margin-right: 14px;
	float: left;
}
@media screen and (min-width: 765px) {
	.entry-meta {
		float: right;
		margin-top: -55px;
		margin-left: 1em;
		padding: 1em;
		border: 2px solid #e9e9e9;
		border-radius: 5px;
		width: 250px;
	}
}

/*Discussion Section Styling*/
.single-project #discussion .comment-respond,
.single-project #discussion .comment-body {
	margin: 2rem auto;
	background-color: #fff;
	border-radius: 5px;
	box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
	padding: 1em 3em;
	position: relative;
}
.single-project #discussion .comment-body {
	padding: 2em 3em;
}
.single-project #discussion .comments-area .comment-list {
	margin: 0;
	padding: 0;
}
.single-project #discussion .comments-area ol {
	list-style: none;
}
.single-project #discussion .comments-area ol.children {
	margin-top: -1em;
}
.single-project #discussion .comments-area .comment-author {
	display: flex;
	position: relative;
}
.single-project #discussion .comments-area .comment-author .avatar {
	width: 45px;
	height: 45px;
	border-radius: 50%;
	margin-right: 14px;
	float: left;
}
.single-project #discussion .comments-area .comment-author .says {
	display: none;
}
.single-project #discussion .comments-area .comment-author .fn {
}
.single-project #discussion .comments-area .comment-metadata {
	padding-left: 58px;
	display: block;
	margin-top: -22px;
}
.single-project #discussion .comments-area .comment-metadata,
.single-project #discussion .comments-area .comment-metadata a,
.single-project #discussion .comments-area .logged-in-as,
.single-project #discussion .comments-area .logged-in-as a,
.single-project #discussion .comment-reply-title small,
.single-project #discussion .comment-reply-title small a {
	color: #aeb6bf;
	font-size: 0.9rem;
}
.single-project #discussion .comment-reply-title small {
	padding-left: 1em;
	font-weight: 400;
}
.single-project #discussion .comments-area .reply a,
.single-project #discussion .comments-area input[type="submit"] {
	display: inline-block;
	font-family: 'Montserrat', sans-serif;
	border: 1px solid #7B8F97;
	color: #7B8F97;
	padding: 6px 12px;
	font-size: 0.8rem;
	border-radius: 2px;
	text-align: center;
	position: relative;
}
.single-project #discussion .comments-area .reply a:hover,
.single-project #discussion .comments-area input[type="submit"]:hover {
	border-color: #FF4400;
	color: #FF4400;
	text-decoration: none;
}
.single-project #discussion .comments-area .comment-metadata .edit-link {
	display: block;
	position: absolute;
	top: 2em;
	right: 3em;
}
.single-project #discussion .comment-form-comment textarea {
	border: 2px solid #e9e9e9;
	border-radius: 5px;
	background: #fff;
}

/*Login page*/
.page-template-page_login .content-area {
	text-align: center;
	min-height: 80vh;
	display: flex;
	align-items: center;
}
.page-template-page_login .content-area .site-main {
	width: 100%;
}
/* ... */

